[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/scripts/Plexus.gd" type="Script" id=1]
[ext_resource path="res://src/scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://src/scripts/slider.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://src/img/white.png" type="Texture" id=5]
[ext_resource path="res://src/scripts/bottom_status_lbl.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.00784314, 0.0117647, 0.290196, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
shadow_size = 3

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("GUI:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("canvas/Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("canvas/fps:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("canvas/background:rect_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 610, 556 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("canvas/background:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 255, 26 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("canvas/bottom_status:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "full_canvas"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("GUI:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("canvas/Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("canvas/fps:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("canvas/background:rect_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1027, 602 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("canvas/background:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3, -2 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("canvas/bottom_status:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="canvas" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="canvas"]
margin_left = 255.0
margin_top = 26.0
margin_right = 865.0
margin_bottom = 582.0
rect_clip_content = true
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Plexus" type="Control" parent="canvas/background"]
visible = false
margin_left = -253.0
margin_top = -25.0
margin_right = 771.0
margin_bottom = 575.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
maxDots = 100

[node name="update" type="Timer" parent="canvas/background/Plexus"]
process_mode = 0
wait_time = 0.01
autostart = true

[node name="spawn_new" type="Timer" parent="canvas/background/Plexus"]
process_mode = 0
wait_time = 0.01
autostart = true

[node name="destroy" type="Timer" parent="canvas/background/Plexus"]
process_mode = 0
wait_time = 0.01
autostart = true

[node name="move" type="Timer" parent="canvas/background/Plexus"]
wait_time = 0.01
autostart = true

[node name="Label" type="Label" parent="canvas"]
margin_left = 513.0
margin_top = 9.0
margin_right = 855.0
margin_bottom = 23.0
text = "F1 - hide GUI and fill canvas |  F11 - fullscreen mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fps" type="Label" parent="canvas"]
margin_left = 264.0
margin_top = 9.0
margin_right = 391.0
margin_bottom = 23.0
text = "0 FPS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bottom_status" type="RichTextLabel" parent="canvas"]
margin_left = 255.0
margin_top = 584.0
margin_right = 866.0
margin_bottom = 599.0
bbcode_enabled = true
bbcode_text = "[color=yellow]This software is still in beta![/color] If you find any bugs please report them on my GitHub"
text = "This software is still in beta! If you find any bugs please report them on my GitHub"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" type="Node2D" parent="."]
z_index = 1

[node name="menus" type="HBoxContainer" parent="GUI"]
margin_left = 2.0
margin_top = 4.0
margin_right = 1021.0
margin_bottom = 594.0
custom_constants/separation = 617
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="left" type="VBoxContainer" parent="GUI/menus"]
margin_right = 250.0
margin_bottom = 590.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="properties" type="Panel" parent="GUI/menus/left"]
margin_right = 250.0
margin_bottom = 590.0
rect_min_size = Vector2( 250, 590 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="GUI/menus/left/properties"]
margin_left = 3.0
margin_top = 3.0
margin_right = 249.0
margin_bottom = 588.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/menus/left/properties/ScrollContainer"]
margin_right = 168.0
margin_bottom = 521.0
rect_min_size = Vector2( 140, 0 )
custom_constants/separation = 9

[node name="Control" type="Control" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer"]
margin_right = 168.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )

[node name="max_points" type="HSlider" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 168.0
margin_bottom = 35.0
rect_min_size = Vector2( 110, 0 )
max_value = 500.0
value = 100.0
script = ExtResource( 3 )

[node name="edit" type="SpinBox" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer/max_points"]
margin_left = 166.0
margin_top = -9.0
margin_right = 240.0
margin_bottom = 15.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer/max_points"]
margin_left = 4.0
margin_top = -12.0
margin_right = 74.0
margin_bottom = 2.0
text = "Max points"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="update_itrv" type="HSlider" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 168.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 0 )
min_value = 0.01
max_value = 2.0
step = 0.01
value = 0.01
script = ExtResource( 3 )

[node name="edit" type="SpinBox" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer/update_itrv"]
margin_left = 166.0
margin_top = -9.0
margin_right = 240.0
margin_bottom = 15.0
step = 0.1
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer/update_itrv"]
margin_left = 4.0
margin_top = -12.0
margin_right = 74.0
margin_bottom = 2.0
text = "Update interval"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spawn_itrv" type="HSlider" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 168.0
margin_bottom = 85.0
rect_min_size = Vector2( 120, 0 )
min_value = 0.01
max_value = 2.0
step = 0.01
value = 0.01
script = ExtResource( 3 )

[node name="edit" type="SpinBox" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer/spawn_itrv"]
margin_left = 166.0
margin_top = -9.0
margin_right = 240.0
margin_bottom = 15.0
step = 0.1
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer/spawn_itrv"]
margin_left = 4.0
margin_top = -12.0
margin_right = 74.0
margin_bottom = 2.0
text = "Spawn interval"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="despawn_itrv" type="HSlider" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 168.0
margin_bottom = 110.0
rect_min_size = Vector2( 120, 0 )
min_value = 0.01
max_value = 10.0
value = 0.01
script = ExtResource( 3 )

[node name="edit" type="SpinBox" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer/despawn_itrv"]
margin_left = 166.0
margin_top = -9.0
margin_right = 240.0
margin_bottom = 15.0
step = 0.01
value = 0.01
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer/despawn_itrv"]
margin_left = 4.0
margin_top = -12.0
margin_right = 74.0
margin_bottom = 2.0
text = "Despawn interval"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_itrv" type="HSlider" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer"]
margin_top = 119.0
margin_right = 168.0
margin_bottom = 135.0
rect_min_size = Vector2( 120, 0 )
min_value = 0.01
max_value = 10.0
value = 0.01
script = ExtResource( 3 )

[node name="edit" type="SpinBox" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer/move_itrv"]
margin_left = 166.0
margin_top = -9.0
margin_right = 240.0
margin_bottom = 15.0
step = 0.01
value = 0.01
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer/move_itrv"]
margin_left = 4.0
margin_top = -12.0
margin_right = 74.0
margin_bottom = 2.0
text = "Move interval"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="line_width" type="HSlider" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 168.0
margin_bottom = 160.0
rect_min_size = Vector2( 120, 0 )
min_value = 0.01
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource( 3 )

[node name="edit" type="SpinBox" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer/line_width"]
margin_left = 166.0
margin_top = -9.0
margin_right = 240.0
margin_bottom = 15.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer/line_width"]
margin_left = 4.0
margin_top = -12.0
margin_right = 74.0
margin_bottom = 2.0
text = "Line width"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="update_itrv5" type="HSlider" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer"]
visible = false
margin_top = 200.0
margin_right = 120.0
margin_bottom = 216.0
rect_min_size = Vector2( 110, 0 )
min_value = 0.01
max_value = 10.0
value = 0.01
script = ExtResource( 3 )

[node name="edit" type="SpinBox" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer/update_itrv5"]
margin_left = 117.0
margin_top = -9.0
margin_right = 191.0
margin_bottom = 15.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer/update_itrv5"]
margin_left = 4.0
margin_top = -12.0
margin_right = 74.0
margin_bottom = 2.0
text = "Update interval"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="update_enabled" type="CheckButton" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer"]
margin_top = 169.0
margin_right = 168.0
margin_bottom = 209.0
pressed = true
text = "Update"

[node name="circles_enabled" type="CheckButton" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer"]
margin_top = 218.0
margin_right = 168.0
margin_bottom = 258.0
text = "Draw circles"

[node name="lines_enabled" type="CheckButton" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer"]
margin_top = 267.0
margin_right = 168.0
margin_bottom = 307.0
pressed = true
text = "Draw lines"

[node name="btn_plexus_color" type="Button" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer"]
margin_top = 316.0
margin_right = 168.0
margin_bottom = 336.0
text = "Select line color"

[node name="btn_circle_color" type="Button" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer"]
margin_top = 345.0
margin_right = 168.0
margin_bottom = 365.0
text = "Select circle color"

[node name="btn_modulate" type="Button" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer"]
margin_top = 374.0
margin_right = 168.0
margin_bottom = 394.0
text = "Select global color"

[node name="btn_bgcolor" type="Button" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer"]
margin_top = 403.0
margin_right = 168.0
margin_bottom = 423.0
text = "Select background color"

[node name="flip_x" type="CheckButton" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer"]
margin_top = 432.0
margin_right = 168.0
margin_bottom = 472.0
text = "flip horizontal"

[node name="Label" type="Label" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer/flip_x"]
margin_left = 3.0
margin_top = 35.0
margin_right = 158.0
margin_bottom = 49.0
text = "(Forks only in export!)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flip_y" type="CheckButton" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer"]
margin_top = 481.0
margin_right = 168.0
margin_bottom = 521.0
disabled = true
text = "flip vertical"

[node name="Label" type="Label" parent="GUI/menus/left/properties/ScrollContainer/VBoxContainer/flip_y"]
margin_left = 3.0
margin_top = 35.0
margin_right = 158.0
margin_bottom = 49.0
text = "(Forks only in export!)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right" type="VBoxContainer" parent="GUI/menus"]
margin_left = 867.0
margin_right = 1017.0
margin_bottom = 590.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings_stuff" type="Panel" parent="GUI/menus/right"]
margin_right = 150.0
margin_bottom = 48.089
rect_min_size = Vector2( 150, 48.089 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="GUI/menus/right/settings_stuff"]
margin_left = 3.0
margin_top = 2.0
margin_right = 147.0
margin_bottom = 47.0
follow_focus = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/menus/right/settings_stuff/ScrollContainer"]
margin_right = 143.887
margin_bottom = 44.0
rect_min_size = Vector2( 143.887, 0 )

[node name="btn_about" type="Button" parent="GUI/menus/right/settings_stuff/ScrollContainer/VBoxContainer"]
margin_right = 143.0
margin_bottom = 20.0
text = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_settings" type="Button" parent="GUI/menus/right/settings_stuff/ScrollContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 143.0
margin_bottom = 44.0
disabled = true
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controls" type="Panel" parent="GUI/menus/right"]
margin_top = 52.0
margin_right = 150.0
margin_bottom = 579.171
rect_min_size = Vector2( 150, 527.171 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="GUI/menus/right/controls"]
margin_left = 4.0
margin_top = 2.0
margin_right = 148.0
margin_bottom = 521.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/menus/right/controls/ScrollContainer"]
margin_right = 144.0
margin_bottom = 254.0

[node name="Control" type="Control" parent="GUI/menus/right/controls/ScrollContainer/VBoxContainer"]
margin_right = 144.0
margin_bottom = 10.577
rect_min_size = Vector2( 0, 10.577 )

[node name="render_preview" type="TextureRect" parent="GUI/menus/right/controls/ScrollContainer/VBoxContainer"]
margin_top = 14.0
margin_right = 144.0
margin_bottom = 114.0
rect_min_size = Vector2( 142, 100 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="GUI/menus/right/controls/ScrollContainer/VBoxContainer/render_preview"]
margin_left = 9.0
margin_top = -14.0
margin_right = 135.0
text = "last rendered frame"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_save_img" type="Button" parent="GUI/menus/right/controls/ScrollContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 144.0
margin_bottom = 138.0
text = "Save PNG"

[node name="btn_record_gif" type="Button" parent="GUI/menus/right/controls/ScrollContainer/VBoxContainer"]
margin_top = 142.0
margin_right = 144.0
margin_bottom = 162.0
disabled = true
text = "Record GIF"

[node name="btn_record" type="Button" parent="GUI/menus/right/controls/ScrollContainer/VBoxContainer"]
self_modulate = Color( 1, 0, 0, 1 )
margin_top = 166.0
margin_right = 144.0
margin_bottom = 186.0
disabled = true
text = "Record video"

[node name="btn_openpath" type="Button" parent="GUI/menus/right/controls/ScrollContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 144.0
margin_bottom = 210.0
text = "Open export folder"

[node name="open_after_render" type="CheckButton" parent="GUI/menus/right/controls/ScrollContainer/VBoxContainer"]
margin_top = 214.0
margin_right = 144.0
margin_bottom = 254.0
pressed = true
text = "auto open"

[node name="popups" type="Node2D" parent="GUI"]
z_index = 5

[node name="plexus_color" type="ColorPicker" parent="GUI/popups"]
visible = false
margin_left = 354.0
margin_top = 74.0
margin_right = 662.0
margin_bottom = 536.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="GUI/popups/plexus_color"]
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 151.5, 224.5 )
scale = Vector2( 5.73438, 8.01563 )
z_index = -1
texture = ExtResource( 4 )

[node name="circle_color" type="ColorPicker" parent="GUI/popups"]
visible = false
margin_left = 354.0
margin_top = 74.0
margin_right = 662.0
margin_bottom = 536.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="GUI/popups/circle_color"]
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 151.5, 224.5 )
scale = Vector2( 5.73438, 8.01563 )
z_index = -1
texture = ExtResource( 4 )

[node name="modulate" type="ColorPicker" parent="GUI/popups"]
visible = false
margin_left = 358.0
margin_top = 78.0
margin_right = 666.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="GUI/popups/modulate"]
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 151.5, 224.5 )
scale = Vector2( 5.73438, 8.01563 )
z_index = -1
texture = ExtResource( 4 )

[node name="bgcolor" type="ColorPicker" parent="GUI/popups"]
visible = false
margin_left = 362.0
margin_top = 82.0
margin_right = 670.0
margin_bottom = 544.0
color = Color( 0, 0, 0, 1 )
edit_alpha = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="GUI/popups/bgcolor"]
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 151.5, 224.5 )
scale = Vector2( 5.73438, 8.01563 )
z_index = -1
texture = ExtResource( 4 )

[node name="popup_about" type="WindowDialog" parent="GUI/popups"]
margin_left = 326.0
margin_top = 105.0
margin_right = 796.0
margin_bottom = 467.0
window_title = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="GUI/popups/popup_about"]
margin_top = 4.0
margin_right = 467.0
margin_bottom = 361.0
focus_mode = 2
bbcode_enabled = true
bbcode_text = "[color=blue]Plexus gen[/color] v1.0
by Wolfyxon
[color=red][url]https://wolfyxon.github.io[/url][/color]

Used stuff:
-Godot Engine [url]https://github.com/godotengine/godot[/url]
-PlexusBackground [url]https://github.com/SpyrexDE/PlexusBackground[/url]"
text = "Plexus gen v1.0
by Wolfyxon
https://wolfyxon.github.io

Used stuff:
-Godot Engine https://github.com/godotengine/godot
-PlexusBackground https://github.com/SpyrexDE/PlexusBackground"
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/full_canvas = SubResource( 2 )

[connection signal="timeout" from="canvas/background/Plexus/update" to="canvas/background/Plexus" method="_on_update_timeout"]
[connection signal="timeout" from="canvas/background/Plexus/spawn_new" to="canvas/background/Plexus" method="_on_spawn_new_timeout"]
[connection signal="timeout" from="canvas/background/Plexus/destroy" to="canvas/background/Plexus" method="_on_destroy_timeout"]
[connection signal="timeout" from="canvas/background/Plexus/move" to="canvas/background/Plexus" method="_on_move_timeout"]
[connection signal="value_changed" from="GUI/menus/left/properties/ScrollContainer/VBoxContainer/max_points" to="GUI/menus/left/properties/ScrollContainer/VBoxContainer/max_points" method="_on_max_points_value_changed"]
[connection signal="value_changed" from="GUI/menus/left/properties/ScrollContainer/VBoxContainer/max_points/edit" to="GUI/menus/left/properties/ScrollContainer/VBoxContainer/max_points" method="_on_edit_value_changed"]
[connection signal="value_changed" from="GUI/menus/left/properties/ScrollContainer/VBoxContainer/update_itrv" to="GUI/menus/left/properties/ScrollContainer/VBoxContainer/update_itrv" method="_on_max_points_value_changed"]
[connection signal="value_changed" from="GUI/menus/left/properties/ScrollContainer/VBoxContainer/update_itrv/edit" to="GUI/menus/left/properties/ScrollContainer/VBoxContainer/update_itrv" method="_on_edit_value_changed"]
[connection signal="value_changed" from="GUI/menus/left/properties/ScrollContainer/VBoxContainer/spawn_itrv" to="GUI/menus/left/properties/ScrollContainer/VBoxContainer/spawn_itrv" method="_on_max_points_value_changed"]
[connection signal="value_changed" from="GUI/menus/left/properties/ScrollContainer/VBoxContainer/spawn_itrv/edit" to="GUI/menus/left/properties/ScrollContainer/VBoxContainer/spawn_itrv" method="_on_edit_value_changed"]
[connection signal="value_changed" from="GUI/menus/left/properties/ScrollContainer/VBoxContainer/despawn_itrv" to="GUI/menus/left/properties/ScrollContainer/VBoxContainer/despawn_itrv" method="_on_max_points_value_changed"]
[connection signal="value_changed" from="GUI/menus/left/properties/ScrollContainer/VBoxContainer/despawn_itrv/edit" to="GUI/menus/left/properties/ScrollContainer/VBoxContainer/despawn_itrv" method="_on_edit_value_changed"]
[connection signal="value_changed" from="GUI/menus/left/properties/ScrollContainer/VBoxContainer/move_itrv" to="GUI/menus/left/properties/ScrollContainer/VBoxContainer/move_itrv" method="_on_max_points_value_changed"]
[connection signal="value_changed" from="GUI/menus/left/properties/ScrollContainer/VBoxContainer/move_itrv/edit" to="GUI/menus/left/properties/ScrollContainer/VBoxContainer/move_itrv" method="_on_edit_value_changed"]
[connection signal="value_changed" from="GUI/menus/left/properties/ScrollContainer/VBoxContainer/line_width" to="GUI/menus/left/properties/ScrollContainer/VBoxContainer/line_width" method="_on_max_points_value_changed"]
[connection signal="value_changed" from="GUI/menus/left/properties/ScrollContainer/VBoxContainer/line_width/edit" to="GUI/menus/left/properties/ScrollContainer/VBoxContainer/line_width" method="_on_edit_value_changed"]
[connection signal="value_changed" from="GUI/menus/left/properties/ScrollContainer/VBoxContainer/update_itrv5" to="GUI/menus/left/properties/ScrollContainer/VBoxContainer/update_itrv5" method="_on_max_points_value_changed"]
[connection signal="value_changed" from="GUI/menus/left/properties/ScrollContainer/VBoxContainer/update_itrv5/edit" to="GUI/menus/left/properties/ScrollContainer/VBoxContainer/update_itrv5" method="_on_edit_value_changed"]
[connection signal="pressed" from="GUI/menus/left/properties/ScrollContainer/VBoxContainer/btn_plexus_color" to="." method="_on_btn_plexus_color_pressed"]
[connection signal="pressed" from="GUI/menus/left/properties/ScrollContainer/VBoxContainer/btn_circle_color" to="." method="_on_btn_circle_color_pressed"]
[connection signal="pressed" from="GUI/menus/left/properties/ScrollContainer/VBoxContainer/btn_modulate" to="." method="_on_btn_modulate_pressed"]
[connection signal="pressed" from="GUI/menus/left/properties/ScrollContainer/VBoxContainer/btn_bgcolor" to="." method="_on_btn_bgcolor_pressed"]
[connection signal="pressed" from="GUI/menus/right/settings_stuff/ScrollContainer/VBoxContainer/btn_about" to="." method="_on_btn_about_pressed"]
[connection signal="pressed" from="GUI/menus/right/controls/ScrollContainer/VBoxContainer/btn_save_img" to="." method="_on_btn_save_img_pressed"]
[connection signal="pressed" from="GUI/menus/right/controls/ScrollContainer/VBoxContainer/btn_openpath" to="." method="_on_btn_openpath_pressed"]
[connection signal="meta_clicked" from="GUI/popups/popup_about/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
